debug: terminal.css| added white-spac, overflow-y scroll and fixed background

--- a/transition/terminal.css
+++ b/transition/terminal.css
@@ -2,4 +2,7 @@ body
 {background-color: #0000AA;
 color:#FFFFFF;
 font-family: "Lucida Console", monospace;
+white-space: pre-line;
+overflow-y: scroll;
+background-attachment: fixed;
 }
